--- a/Pathfind/MainWindow.xaml
+++ b/Pathfind/MainWindow.xaml
@@ -14,8 +14,8 @@
         <Grid Grid.Column="0" Panel.ZIndex="10">
             <Grid.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFB99AFF" Offset="0"/>
-                    <GradientStop Color="#FF7C40FF" Offset="1"/>
+                    <GradientStop Color="#F8B195" Offset="0"/>
+                    <GradientStop Color="#F67280" Offset="1"/>
                 </LinearGradientBrush>
             </Grid.Background>
             <Grid Margin="0,50,0,0">
@@ -25,27 +25,41 @@
                     <RowDefinition Height="90"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" HorizontalAlignment="Center" TextWrapping="Wrap" Text="MANGGA" VerticalAlignment="Top" Height="54" Width="162" TextAlignment="Center" FontSize="36" FontWeight="Bold" Margin="0,0,0,0" Style="{StaticResource VigaFont}" Foreground="white"/>
-                <TextBlock Grid.Row="1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Introvert Transformer On the Go!" VerticalAlignment="Top" Height="35" Width="334" TextAlignment="Center" FontSize="14" Margin="0,0,0,0" Style="{StaticResource VigaFont}" Foreground="white"/>
+                <TextBlock Grid.Row="0" HorizontalAlignment="Center" TextWrapping="Wrap" Text="MANGGA" VerticalAlignment="Top" Height="54" Width="162" TextAlignment="Center" FontSize="36" FontWeight="Bold" Margin="0,0,0,0" Style="{StaticResource VigaFont}">
+                    <TextBlock.Effect>
+                        <DropShadowEffect BlurRadius="0" ShadowDepth="1" Opacity="0.1"/>
+                    </TextBlock.Effect>
+                    <TextBlock.Foreground>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="#FF6C5B7B" Offset="0"/>
+                            <GradientStop Color="#FF355C7B" Offset="1"/>
+                        </LinearGradientBrush>
+                    </TextBlock.Foreground>
+                </TextBlock>
+                <TextBlock Grid.Row="1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Track Where Ever You Go!" VerticalAlignment="Top" Height="35" Width="334" TextAlignment="Center" FontSize="16" Margin="0,0,0,0" Style="{StaticResource VigaFont}">
+                    <TextBlock.Effect>
+                        <DropShadowEffect ShadowDepth="0" BlurRadius="0" Opacity="0"/>
+                    </TextBlock.Effect>
+                    <TextBlock.Foreground>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="#FFC06C84" Offset="0"/>
+                            <GradientStop Color="#FF6C5B7B" Offset="0.864"/>
+                        </LinearGradientBrush>
+                    </TextBlock.Foreground>
+                </TextBlock>
                 <Grid Grid.Row="2">
                     <Border BorderBrush="White" BorderThickness="1" HorizontalAlignment="Center" Height="66" Margin="0,25,0,0" VerticalAlignment="Top" Width="507" CornerRadius="8" Background="#FF8D59FF" Panel.ZIndex="-1" Opacity="0.05"/>
-                    <TextBlock HorizontalAlignment="Center" Height="20" Margin="0,32,0,0" TextWrapping="Wrap" Text="FRIENDSHIP GRAPH" VerticalAlignment="Top" Width="269" RenderTransformOrigin="1.557,0.5" Style="{StaticResource VigaFont}" TextAlignment="Center" Foreground="#FF522E92"/>
-                    <Button Content="Browse" HorizontalAlignment="Center" Height="20" Margin="0,57,0,0" VerticalAlignment="Top" Width="59" Click="Browse_File_Button" Name="BrowseButton" RenderTransformOrigin="0.49,0.7" ScrollViewer.HorizontalScrollBarVisibility="Auto" Background="#FFFF95D6" Foreground="White" BorderBrush="{x:Null}" Opacity="0.8" Style="{StaticResource VigaFont}"/>
+                    <TextBlock HorizontalAlignment="Center" Height="20" Margin="0,32,0,0" TextWrapping="Wrap" Text="TRACK GRAPH" VerticalAlignment="Top" Width="269" RenderTransformOrigin="1.557,0.5" Style="{StaticResource VigaFont}" TextAlignment="Center" Foreground="#FF355C7D"/>
+                    <Button Content="Browse" HorizontalAlignment="Center" Height="20" Margin="0,57,0,0" VerticalAlignment="Top" Width="59" Click="Browse_File_Button" Name="BrowseButton" RenderTransformOrigin="0.49,0.7" ScrollViewer.HorizontalScrollBarVisibility="Auto" Background="#FFC06C84" Foreground="White" BorderBrush="{x:Null}" Opacity="0.8" Style="{StaticResource VigaFont}"/>
                 </Grid>
                 <Grid Grid.Row="3" HorizontalAlignment="Center" Height="500" Margin="0,20,0,0" VerticalAlignment="Top" Width="600" Name="graphCanvas"/>
             </Grid>
-            <Ellipse Fill="#FF9B6DFF" HorizontalAlignment="Left" Height="185" Margin="-5,724,0,-38.6" VerticalAlignment="Top" Width="190" Opacity="0.4"/>
-            <Ellipse Fill="#FF9B6DFF" HorizontalAlignment="Left" Height="185" Margin="112,707,0,-21.6" VerticalAlignment="Top" Width="190" Opacity="0.4"/>
-            <Ellipse Fill="#FF9B6DFF" HorizontalAlignment="Left" Height="185" Margin="190,758,0,-72.6" VerticalAlignment="Top" Width="190" Opacity="0.4"/>
-            <Ellipse Fill="#FF9B6DFF" HorizontalAlignment="Left" Height="185" Margin="324,724,0,-38.6" VerticalAlignment="Top" Width="190" Opacity="0.4"/>
-            <Ellipse Fill="#FF9B6DFF" HorizontalAlignment="Left" Height="185" Margin="458,707,0,-21.6" VerticalAlignment="Top" Width="190" Opacity="0.4"/>
-            <Ellipse Fill="#FF9B6DFF" HorizontalAlignment="Left" Height="202" Margin="597,741,-0.2,-72.6" VerticalAlignment="Top" Width="200" Opacity="0.4"/>
         </Grid>
         <Grid Grid.Column="1">
             <Grid.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFE8BEFF" Offset="0"/>
-                    <GradientStop Color="#FFEBDEFF" Offset="1"/>
+                    <GradientStop Color="#C06C84" Offset="0"/>
+                    <GradientStop Color="#6C5B7B" Offset="1"/>
                 </LinearGradientBrush>
             </Grid.Background>
             <Grid Margin="0,20,0,0">
@@ -59,23 +73,23 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0" Margin="0,0,0,0">
-                    <TextBlock HorizontalAlignment="Center" Margin="0,0,0,0" TextWrapping="Wrap" Text="Which person to stalk?" Width="133" Foreground="#FF522E92" Style="{StaticResource VigaFont}" TextAlignment="Center"/>
+                    <TextBlock HorizontalAlignment="Center" Margin="0,0,0,0" TextWrapping="Wrap" Text="Which person to stalk?" Width="133" Foreground="#FFFAF0EC" Style="{StaticResource VigaFont}" TextAlignment="Center"/>
                 </Grid>
                 <Grid Grid.Row="1" Margin="0,0,0,0">
                     <ComboBox HorizontalAlignment="Center" Height="20" Margin="0,0,0,0" VerticalAlignment="Top" Width="76" Name="Choose_Account_ComboBox" SelectionChanged="Choose_Account_ComboBox_SelectionChanged" RenderTransformOrigin="0.808,0.57"/>
                 </Grid>
                 <Grid Grid.Row="2" Margin="0,0,0,0">
-                    <TextBlock HorizontalAlignment="Center" Height="20" Margin="0,0,0,0" TextWrapping="Wrap" Text="Explore Friends With" VerticalAlignment="Top" Width="133" Foreground="#FF522E92" Style="{StaticResource VigaFont}" TextAlignment="Center"/>
+                    <TextBlock HorizontalAlignment="Center" Height="20" Margin="0,0,0,0" TextWrapping="Wrap" Text="Explore Friends With" VerticalAlignment="Top" Width="133" Foreground="#FFFAF0EC" Style="{StaticResource VigaFont}" TextAlignment="Center"/>
                 </Grid>
                 <Grid Grid.Row="3" Margin="0,0,0,0">
                     <ComboBox HorizontalAlignment="Center" Height="20" Margin="0,0,0,0" VerticalAlignment="Top" Width="76" Name="Explore_ComboBox" SelectionChanged="Explore_ComboBox_SelectionChanged"/>
                 </Grid>
                 <Grid Grid.Row="4" Margin="0,10,0,0">
-                    <TextBlock HorizontalAlignment="Center" Height="20" Margin="0,0,0,0" TextWrapping="Wrap" Text="How would you find your true friends?" VerticalAlignment="Top" Width="229" Foreground="#FF522E92" TextAlignment="Center" Style="{StaticResource VigaFont}"/>
-                    <RadioButton Content="DFS" HorizontalAlignment="Center" Height="20" Margin="70,20,0,0" VerticalAlignment="Top" Width="50" Checked="DFS_Checked" RenderTransformOrigin="0.108,0.5" Foreground="#FF673ab7" FontWeight="Bold" Opacity="0.8" Name="DFS_Radio"/>
-                    <RadioButton Content="BFS" HorizontalAlignment="Center" Height="20" Margin="0,20,70,0" VerticalAlignment="Top" Width="50" Checked="BFS_Checked" Foreground="#FF673ab7" FontWeight="Bold" Opacity="0.8" Name="BFS_Radio"/>
+                    <TextBlock HorizontalAlignment="Center" Height="20" Margin="0,0,0,0" TextWrapping="Wrap" Text="How would you find your true friends?" VerticalAlignment="Top" Width="229" Foreground="#FFFAF0EC" TextAlignment="Center" Style="{StaticResource VigaFont}"/>
+                    <RadioButton Content="DFS" HorizontalAlignment="Center" Height="20" Margin="70,20,0,0" VerticalAlignment="Top" Width="50" Checked="DFS_Checked" RenderTransformOrigin="0.108,0.5" Foreground="#FFFAF0EC" FontWeight="Bold" Opacity="0.8" Name="DFS_Radio"/>
+                    <RadioButton Content="BFS" HorizontalAlignment="Center" Height="20" Margin="0,20,70,0" VerticalAlignment="Top" Width="50" Checked="BFS_Checked" Foreground="#FFFAF0EC" FontWeight="Bold" Opacity="0.8" Name="BFS_Radio"/>
                 </Grid>
-                <Button Grid.Row="5" Content="Search" HorizontalAlignment="Center" Height="25" Margin="0,10,0,0" VerticalAlignment="Top" Width="61" Click="Search_Click" Background="#FFFF95D6" Foreground="White" BorderBrush="{x:Null}" Opacity="0.8" Style="{StaticResource VigaFont}"/>
+                <Button Grid.Row="5" Content="Search" HorizontalAlignment="Center" Height="25" Margin="0,10,0,0" VerticalAlignment="Top" Width="61" Click="Search_Click" Background="#FFF67280" Foreground="White" BorderBrush="{x:Null}" Opacity="0.8" Style="{StaticResource VigaFont}"/>
                 <Grid Grid.Row="6">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
