--- a/Pathfind/MainWindow.xaml
+++ b/Pathfind/MainWindow.xaml
@@ -23,6 +23,7 @@
                     <RowDefinition Height="50"/>
                     <RowDefinition Height="20"/>
                     <RowDefinition Height="90"/>
+                    <RowDefinition Height="340"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="0" HorizontalAlignment="Center" TextWrapping="Wrap" Text="MANGGA" VerticalAlignment="Top" Height="54" Width="162" TextAlignment="Center" FontSize="36" FontWeight="Bold" Margin="0,0,0,0" Style="{StaticResource VigaFont}">
@@ -58,7 +59,8 @@
                     <TextBlock HorizontalAlignment="Center" Height="20" Margin="189,32,189.2,0" TextWrapping="Wrap" Text="TRACK GRAPH" VerticalAlignment="Top" Width="269" RenderTransformOrigin="1.557,0.5" Style="{StaticResource VigaFont}" TextAlignment="Center" Foreground="#FFEFD2C7" Grid.ColumnSpan="4"/>
                     <Button Content="Browse" HorizontalAlignment="Center" Height="20" Margin="44.6,57,21.4,0" VerticalAlignment="Top" Width="59" Click="Browse_File_Button" Name="BrowseButton" RenderTransformOrigin="0.49,0.7" ScrollViewer.HorizontalScrollBarVisibility="Auto" Background="#FFF67280" Foreground="White" BorderBrush="{x:Null}" Opacity="0.8" Style="{StaticResource VigaFont}" Grid.Column="1"/>
                 </Grid>
-                <Grid Grid.Row="3" HorizontalAlignment="Center" Height="500" Margin="0,20,0,0" VerticalAlignment="Top" Width="600" Name="graphCanvas"/>
+                <Grid Grid.Row="3" HorizontalAlignment="Center" Height="360" Margin="0,20,0,0" VerticalAlignment="Top" Width="600" Name="graphCanvas"/>
+                <Grid Grid.Row="4" HorizontalAlignment="Center" Height="500" Margin="0,20,0,0" VerticalAlignment="Top" Width="600" Name="legendCanvas"/>
             </Grid>
         </Grid>
         <Grid Grid.Column="1">
@@ -79,23 +81,19 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0" Margin="0,0,0,0">
-                    <TextBlock HorizontalAlignment="Center" Margin="0,0,0,0" TextWrapping="Wrap" Text="Which person to stalk?" Width="133" Foreground="#FF6C5B7B" Style="{StaticResource VigaFont}" TextAlignment="Center"/>
+                    <TextBlock HorizontalAlignment="Center" Margin="0,0,0,0" TextWrapping="Wrap" Text="Where Are You?" Width="133" Foreground="#FF6C5B7B" Style="{StaticResource VigaFont}" TextAlignment="Center"/>
                 </Grid>
                 <Grid Grid.Row="1" Margin="0,0,0,0">
                     <ComboBox HorizontalAlignment="Center" Height="20" Margin="0,0,0,0" VerticalAlignment="Top" Width="76" Name="Choose_Account_ComboBox" SelectionChanged="Choose_Account_ComboBox_SelectionChanged" RenderTransformOrigin="0.808,0.57"/>
                 </Grid>
                 <Grid Grid.Row="2" Margin="0,0,0,0">
-                    <TextBlock HorizontalAlignment="Center" Height="20" Margin="0,0,0,0" TextWrapping="Wrap" Text="Explore Friends With" VerticalAlignment="Top" Width="133" Foreground="#FF6C5B7B" Style="{StaticResource VigaFont}" TextAlignment="Center"/>
+                    <TextBlock HorizontalAlignment="Center" Height="20" Margin="0,0,0,0" TextWrapping="Wrap" Text="Where To Go?" VerticalAlignment="Top" Width="133" Foreground="#FF6C5B7B" Style="{StaticResource VigaFont}" TextAlignment="Center"/>
                 </Grid>
                 <Grid Grid.Row="3" Margin="0,0,0,0">
                     <ComboBox HorizontalAlignment="Center" Height="20" Margin="0,0,0,0" VerticalAlignment="Top" Width="76" Name="Explore_ComboBox" SelectionChanged="Explore_ComboBox_SelectionChanged"/>
                 </Grid>
-                <Grid Grid.Row="4" Margin="0,10,0,0">
-                    <TextBlock HorizontalAlignment="Center" Height="20" Margin="0,0,0,0" TextWrapping="Wrap" Text="How would you find your true friends?" VerticalAlignment="Top" Width="229" Foreground="#FF6C5B7B" TextAlignment="Center" Style="{StaticResource VigaFont}"/>
-                    <RadioButton Content="DFS" HorizontalAlignment="Center" Height="20" Margin="70,20,0,0" VerticalAlignment="Top" Width="50" Checked="DFS_Checked" RenderTransformOrigin="0.108,0.5" Foreground="#FF6C5B7B" FontWeight="Bold" Opacity="0.8" Name="DFS_Radio"/>
-                    <RadioButton Content="BFS" HorizontalAlignment="Center" Height="20" Margin="0,20,70,0" VerticalAlignment="Top" Width="50" Checked="BFS_Checked" Foreground="#FF6C5B7B" FontWeight="Bold" Opacity="0.8" Name="BFS_Radio"/>
-                </Grid>
-                <Button Grid.Row="5" Content="Search" HorizontalAlignment="Center" Height="25" Margin="0,10,0,0" VerticalAlignment="Top" Width="61" Click="Search_Click" Background="#FFF67280" Foreground="White" BorderBrush="{x:Null}" Opacity="0.8" Style="{StaticResource VigaFont}"/>
+                <Grid Grid.Row="4" Margin="0,10,0,0"/>
+                <Button Grid.Row="4" Content="Search" HorizontalAlignment="Center" Height="25" Margin="291,5.2,294.4,0" VerticalAlignment="Top" Width="61" Click="Search_Click" Background="#FFF67280" Foreground="White" BorderBrush="{x:Null}" Opacity="0.8" Style="{StaticResource VigaFont}"/>
                 <Grid Grid.Row="6">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
